--- a/app/views/pages/list.jade
+++ b/app/views/pages/list.jade
@@ -2,6 +2,10 @@ extends ../layout
 
 block content
 	.container
+		
+		h3
+			a(href="/admin/movie/showAdd")
+				span.label.label-primary New
 		.row
 			table.table.table-hover.table-bordered
 				thead
@@ -10,7 +14,7 @@ block content
 						th Director
 						th Country
 						th Language
-						//-th ModifyTime
+						th Category
 						th View
 						th Edit
 						th Delte
@@ -21,8 +25,10 @@ block content
 							td #{item.director}
 							td #{item.country}
 							td #{item.language}
-							//-td #{moment(item.meta.createAt).formmat('MM/DD/YYYY')}
-							td: a(target="_blank",href="../movie/#{item._id}") View
-							td: a(target="_blank",href="../admin/update/#{item._id}") Edit
+							td #{item.category.name}
+							td: a(target="_blank",href="/movie/#{item._id}") View
+							td: a(target="_blank",href="/admin/update/#{item._id}") Edit
 							td 
 								button.btn.btn-danger.del(type="button", data-id="#{item._id}") Delete
+
+	script(src="/js/userList.js")
