--- a/app/views/pages/categoryAdmin.jade
+++ b/app/views/pages/categoryAdmin.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-	.container
+	.container.margin-btm
 		.row
 			form.form-horizontal(method="post", action="/category/new")
 				if(category._id)
