--- a/app/views/pages/detail.jade
+++ b/app/views/pages/detail.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-	.container
+	.container.margin-btm
 		.row
 			.col-md-8
 				iframe(width="854",height="480",src="#{movie.flash}",frameborder="0",allowfullscreen)
