--- a/app/views/pages/result.jade
+++ b/app/views/pages/result.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-	.container
+	.container.margin-btm
 		.row
 			.panel.panel-default 
 				.panel-heading 
@@ -12,7 +12,9 @@ block content
 							.col-md-3
 								.thumbnail
 									a(href="/movie/#{item._id}")
+										
 										img(src="#{item.poster}", alt="#{item.title}")
+										
 									.caption
 										h3 #{item.title}
 										p: a.btn.btn-primary(href="/movie/#{item._id}", role="button") Watch Movie
