--- a/app/views/pages/userList.jade
+++ b/app/views/pages/userList.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-	.container
+	.container.margin-btm
 		.row
 			table.table.table-hover.table-bordered
 				thead
