--- a/app/views/pages/upload.jade
+++ b/app/views/pages/upload.jade
@@ -3,14 +3,13 @@ extends ../layout
 block content
 	.container
 		.row
-			form.form-horizontal(method="post", action="/admin/movie/upload", entype="multipart/form-data") 
+			form.form-horizontal(method="post", action="/upload", enctype="multipart/form-data") 
 				.form-group
 					label.col-sm-3.control-label(for="inputUpload") Poster Upload
 					.col-sm-9
-						input#inputUpload.form-control(type="file", name="posterUpload")
+						input#inputUpload.form-control(type="file", name="fileUploaded")
 				.form-group
 					.col-sm-offset-2.col-sm-10
 						button.btn.btn-defalut(type="submit") submit
-	script(src="/js/admin.js")		
 
 					
